@@ -35,7 +35,8 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
-2007-02-05 DP  1.6.3  Monitor the streams again whilst backing up on Mac - 
+2007-02-05 DP  1.6.3  Fix default perspective names, per Ezequias
+2007-02-05 DP  1.6.3  Monitor the streams again whilst backing up on Mac -
                       this no longer crashesin wx2.8. Per Dave Livesay.
 2007-02-05 DP  1.6.3  Fix a crash on Mac that occurred when using some combo
                       boxes, per David Lowry.
